Update .env.example, package.json, and add README for Duck Agent Kit SDK

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# Duck Agent Kit SDK Configuration
 # Copy this file to .env and fill in your actual values
 
-# Duck Network RPC URL
+# DUCK Network RPC URL (testnet or mainnet)
 DUCK_RPC_URL=duck_rpc_url_here
 
 # WARNING: Never commit your actual private key to version control
 PRIVATE_KEY=your_private_key_here
+
+OPENAI_API_KEY=your_openai_api_key_here
 
