--- a/package.json
+++ b/package.json
@@ -8,11 +8,31 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "test": "node --loader ts-node/esm test/balance.test.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "An AI agent SDK for Duck blockchain",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/priyanshur66/duck-agent-kit.git"
+  },
+  "homepage": "https://github.com/priyanshur66/duck-agent-kit#readme",
+  "bugs": {
+    "url": "https://github.com/priyanshur66/duck-agent-kit/issues"
+  },
+  "keywords": [
+    "duck",
+    "blockchain",
+    "ai",
+    "agent",
+    "ethereum",
+    "web3",
+    "sdk",
+    "crypto",
+    "erc20"
+  ],
   "dependencies": {
     "@langchain/anthropic": "^0.3.11",
     "@langchain/core": "^0.3.23",
